<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/drop_shadow" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/ripple"
                android:id="@+id/layoutFeedback">
                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="6dp"
                    android:gravity="left|center_vertical"
                    android:background="@android:color/transparent"
                    android:textSize="20sp"
                    android:drawablePadding="16dp"
                    android:text="@string/feedback"
                    android:drawableLeft="@drawable/ic_android"
                    android:textColor="@color/abc_primary_text_material_dark"/>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/dividerColor"
                    android:layout_marginLeft="32dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="32dp"
                    android:text="@string/feedback_sub"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:textSize="15sp"
                    android:layout_marginTop="6dp"/>

                <FrameLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dividerColor"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/ripple"
                android:id="@+id/layoutWebsite">
                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="6dp"
                    android:gravity="left|center_vertical"
                    android:background="@android:color/transparent"
                    android:textSize="20sp"
                    android:drawablePadding="16dp"
                    android:text="@string/webpage"
                    android:drawableLeft="@drawable/chrome"
                    android:textColor="@color/abc_primary_text_material_dark"/>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/dividerColor"
                    android:layout_marginLeft="32dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="32dp"
                    android:text="@string/webpage_sub"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:textSize="15sp"
                    android:layout_marginTop="6dp"/>

                <FrameLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dividerColor"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/ripple"
                android:id="@+id/layoutFacebook">
                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="6dp"
                    android:gravity="left|center_vertical"
                    android:background="@android:color/transparent"
                    android:textSize="20sp"
                    android:drawablePadding="16dp"
                    android:text="@string/facebook"
                    android:drawableLeft="@drawable/ic_facebook"
                    android:textColor="@color/abc_primary_text_material_dark"/>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/dividerColor"
                    android:layout_marginLeft="32dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="32dp"
                    android:text="@string/facebook_sub"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:textSize="15sp"
                    android:layout_marginTop="6dp"/>

                <FrameLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dividerColor"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/ripple"
                android:id="@+id/layoutTwitter">
                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="6dp"
                    android:gravity="left|center_vertical"
                    android:background="@android:color/transparent"
                    android:textSize="20sp"
                    android:drawablePadding="16dp"
                    android:text="@string/twitter"
                    android:drawableLeft="@drawable/twitter"
                    android:textColor="@color/abc_primary_text_material_dark"/>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/dividerColor"
                    android:layout_marginLeft="32dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="32dp"
                    android:text="@string/twitter_sub"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:textSize="15sp"
                    android:layout_marginTop="6dp"/>

                <FrameLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dividerColor"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/ripple"
                android:id="@+id/layoutInstagram">
                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="6dp"
                    android:gravity="left|center_vertical"
                    android:background="@android:color/transparent"
                    android:textSize="20sp"
                    android:drawablePadding="16dp"
                    android:text="@string/instagram"
                    android:drawableLeft="@drawable/instagram"
                    android:textColor="@color/abc_primary_text_material_dark"/>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/dividerColor"
                    android:layout_marginLeft="32dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="32dp"
                    android:text="@string/instagram_sub"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:textSize="15sp"
                    android:layout_marginTop="6dp"/>

                <FrameLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dividerColor"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
